# cough

./: .gitignore  CMakeLists.txt  README.md  test.cough
app/: CMakeLists.txt  main.c
lib/: CMakeLists.txt
lib/alloc/: CMakeLists.txt  alloc.c  alloc.h  alloc_stack.h  arena_stack.c  arena_stack.h  array.c  array.h  buf.c  buf.h  hash_map.h
lib/analyzer/: CMakeLists.txt  analyzer.c  analyzer.h
lib/assembler/: CMakeLists.txt  assembler.c  assembler.h
lib/ast/: CMakeLists.txt  ast.c  ast.h  binding.c  binding.h  binding_id.h  expression.c  expression.h  memory.c  storage.c  storage.h  type.c  type.h
lib/bytecode/: CMakeLists.txt  assembly.c  assembly.h  bytecode.c  bytecode.h
lib/collections/: CMakeLists.txt  array.c  array.h  hash_map.c  hash_map.h  string.c  string.h
lib/compiler/: CMakeLists.txt  diagnostics.c  diagnostics.h
lib/compiler/ast/: CMakeLists.txt  function.c  function.h  parser.c  program.c  program.h  symbol.h  type.c
lib/compiler/tokens/: CMakeLists.txt  scanner.c  scanner.h
lib/diagnostics/: CMakeLists.txt  crashing.c  crashing.h  diagnostics.c  diagnostics.h  errno.c  errno.h  log.c  log.h  report.c  report.h  result.h
lib/disassembler/: CMakeLists.txt  disassembler.c  disassembler.h
lib/emitter/: CMakeLists.txt  emitter.c  emitter.h
lib/generator/: CMakeLists.txt  generator.c  generator.h
lib/ops/: CMakeLists.txt  eq.c  eq.h  hash.c  hash.h  ptr.c  ptr.h
lib/parser/: CMakeLists.txt  parser.c  parser.h
lib/source/: CMakeLists.txt  source.c  source.h
lib/text/: CMakeLists.txt  text.c  text.h
lib/tokenizer/: CMakeLists.txt  tokenizer.c  tokenizer.h
lib/tokens/: CMakeLists.txt  token.c  token.h
lib/vm/: CMakeLists.txt  diagnostics.c  diagnostics.h  gc.c  gc.h  system.c  system.h  vm.c  vm.h
src/: CMakeLists.txt  main.c
src/alloc/: alloc.h  alloc_stack.c  alloc_stack.h  arena_stack.c  arena_stack.h  array.c  array.h  dyn_arena.c  dyn_arena.h
src/analyzer/: analyzer.c  analyzer.h
src/ast/: CMakeLists.txt  analyzer.c  analyzer.h  ast.c  ast.h  debug.c  debug.h  expression.c  expression.h  expression_analyze.c  expression_debug.c  expression_parse.c  function.c  function.h  parse_result.h  parser.c  parser.h  program.c  program.h  storage.c  storage.h  symbol.h  type.c  type.h
src/bytecode/: CMakeLists.txt  bytecode.h
src/common/: CMakeLists.txt  primitives.h
src/compiler/: CMakeLists.txt  compiler.h  diagnostics.c  diagnostics.h
src/diagnostic/: CMakeLists.txt  diagnostic.c  diagnostic.h
src/diagnostics/: CMakeLists.txt  diagnostics.c  diagnostics.h
src/primitives/: CMakeLists.txt  primitives.h
src/scanner/: CmakeLists.txt  (+5 more)
tests/: CMakeLists.txt  test.c
(+74 files in other folders)
